--- a/dark.css
+++ b/dark.css
@@ -2,6 +2,11 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Rency", sans-serif;
+}
+@font-face {
+  font-family: "Rency";
+  src: url(./rency.woff2) format("woff2");
 }
 
 body {
