--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ input {
 }
 select {
   padding: 12px 10px;
-  appearance: none;
+  /* appearance: none; */
   border-radius: 15px;
   width: 100%;
   position: relative;
@@ -88,14 +88,6 @@ select {
   background-color: rgb(238, 236, 236);
 }
 
-select::after {
-  content: "⌄";
-  position: absolute;
-  right: 12px;
-  top: 50%;
-  color: black;
-  pointer-events: none;
-}
 p {
   margin-top: 5px;
   font-size: 13px;
